--- a/package.json
+++ b/package.json
@@ -22,22 +22,26 @@
     "xtend": "~4.0.0"
   },
   "devDependencies": {
-    "brfs": "^1.4.0",
+    "babelify": "^6.1.1",
     "browserify": "^8.0.0",
     "clean-css": "~2.2.16",
     "gazer": "0.0.3",
+    "html-inline": "^1.1.1",
     "node-static": "~0.7.6",
     "suitcss-preprocessor": "~0.4.0",
     "uglify-js": "^2.4.16"
   },
   "private": true,
   "scripts": {
+    "deploy": "npm run build && npm run dist && npm run deploy-current",
+    "deploy-current": "surge -p dist -d eom.surge.sh",
+    "dist": "mkdir -p dist && cat build/index.html | html-inline -b build > dist/index.html",
     "clean": "rm -rf build && mkdir build",
     "build_root": "rsync -a src/assets/ build",
     "build_css": "cd src/styles && cat index.css | suitcss | cleancss -o ../../build/index.css",
     "build_css-debug": "cd src/styles && suitcss index.css ../../build/index.css -v",
-    "build_js": "browserify -t brfs src/scripts/index.js | uglifyjs -mc > build/index.js",
-    "build_js-debug": "browserify -t brfs src/scripts/index.js -d > build/index.js",
+    "build_js": "browserify -t babelify src/scripts/index.js | uglifyjs -mc > build/index.js",
+    "build_js-debug": "browserify -t babelify src/scripts/index.js -d > build/index.js",
     "build": "npm run clean && npm run build_root && npm run build_css && npm run build_js",
     "build-debug": "npm run clean && npm run build_root && npm run build_css-debug && npm run build_js-debug",
     "watch_assets": "gazer -p 'src/assets/**/*' npm run build_root &",
@@ -45,7 +49,6 @@
     "watch_scripts": "gazer -p 'src/scripts/**/*' npm run build_js-debug &",
     "watch": "npm run watch_assets && npm run watch_styles && npm run watch_scripts",
     "server": "static build -p 8000",
-    "dist": "npm run build && npm run server",
     "dev": "npm run build-debug && npm run watch && npm run server",
     "start": "npm install && npm run dev"
   }
